--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
+  height: 600px;
 }
 
 h1,
@@ -22,6 +23,7 @@ a {
 img {
   max-width: 100%;
   display: block;
+  border-radius: 4px;
 }
 
 .header-bg {
@@ -99,6 +101,7 @@ img {
 .introducao-bg {
   background: #000;
   color: #fff;
+  box-shadow: inset 0 -120px #fff;
 }
 
 .introducao {
@@ -113,7 +116,12 @@ img {
 
 .introducao-conteudo {
   align-self: flex-end;
-  padding-bottom: 80px;
+  padding-bottom: 200px;
+}
+
+.introducao img {
+  height: 100%;
+  object-fit: cover;
 }
 
 .introducao h1 {
