--- a/css/bicicletas/bicicletas-lista.css
+++ b/css/bicicletas/bicicletas-lista.css
@@ -1,5 +1,6 @@
 .bicicletas-lista {
-  padding: 60px 0 120px;
+  padding-top: 60px;
+  padding-bottom: 120px;
 }
 
 .bicicletas-lista h2 {
@@ -13,6 +14,10 @@
   max-width: 1400px;
   margin: 0 auto;
   overflow-x: auto;
+}
+
+#bicicleta .bicicletas-lista ul {
+  padding: 0 0 20px 0;
 }
 
 .bicicletas-lista li {
@@ -40,7 +45,7 @@
   height: 8px;
   margin-right: 8px;
   width: 12px;
-  transition: width .2s;
+  transition: width 0.2s;
 }
 
 .bicicletas-lista a:hover h3::before {
