--- a/css/orcamento/orcamento.css
+++ b/css/orcamento/orcamento.css
@@ -33,7 +33,7 @@
 
 .orcamento-produto {
   border-radius: 5px 0 0 5px;
-  display: grid;
+  /* display: grid; */
   gap: 20px;
   background: var(--cor-12);
 }
@@ -41,4 +41,25 @@
 .orcamento-dados {
   border-radius: 0 5px 5px 0;
   background: var(--cor-0);
+}
+
+.orcamento-produto label {
+  background: #ccc;
+  padding: 20px;
+  display: inline-block;
+}
+
+.orcamento-conteudo {
+  padding: 20px;
+  background: #222;
+  margin: 20px 0;
+  display: none;
+}
+
+#bikcraft:checked ~ #orcamento-bikcraft {
+  display: block;
+}
+
+#seguro:checked ~ #orcamento-seguro {
+  display: block;
 }
